# Go2_simulator

devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
logs/catkin_tools_prebuild/: build.cmake.000.log.stderr  build.cmake.003.log.stderr  build.cmake.004.log.stderr
logs/go2_controller/: build.check.009.log.stderr  build.cmake.002.log.stderr  build.cmake.004.log.stderr  build.cmake.005.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  (+29 more)
src/controls/go2_controller/: CMakeLists.txt
src/controls/go2_controller/include/: go2_controller.h
src/controls/go2_controller/launch/: go2_controller.launch
src/controls/go2_controller/src/: Forward_Kinematics.cpp  Inverse_Kinematics.cpp  Jacobians.cpp  Kinematics.cpp  TaskSpacePDControl.cpp  Trajectories.cpp  go2_controller.cpp  go2_controller_node.cpp
(+62 files in other folders)
